# cs336-a4

./: .gitmodules  down_prog.py  monitor_bandwidth.sh  test_and_make_submission.sh  test_results.xml
cs336-basics/: requirements.txt
cs336-basics/cs336_basics/scripts/: rev_train_single_node.sh  train.py  train_multi_node.sh  train_rev.py  train_single_node.sh
cs336-data/: requirements.txt
cs336-data/cs336_data/: classify.py  dedup.py  extract.py  fast.py  gopher.py  identify.py  mask.py
cs336-data/tests/: adapters.py  test_deduplication.py
lb/: pyproject.toml
lb/lb/: dedup.py  extract.py  filter.py  filter_.py  final.py  inspect_final.py  tokenize.py  utils.py
lb/lb/scripts/: dedup.py  dup.py  extract_cc.py  extract_paloma.py  filter.py  tokenize.py
lb/notebooks/: hash_count.ipynb  paloma.ipynb  train.ipynb
notebooks/: classify.ipynb  gopher.ipynb  lid.ipynb  mask.ipynb  quality_extract.ipynb
scripts/: scrape_html.py
