[build-system]
requires = ["flit-core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lb"
version = "0.1.0"
description = "code for leaderboard submission"
dependencies = [
	"xopen",
	"transformers",
	"torch==2.3.0",
	# "beautifulsoup4",
	# "cchardet",
	"mmh3",
	# "fastwarc",
	# "lxml",
	"huggingface_hub",
	"fasttext @ git+https://github.com/facebookresearch/fastText"
	"nltk",
]

